changed a spacing issue in benefits

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -102,6 +102,10 @@ aside {
     max-width: 150px;
 }
 
+.benefit p {
+    margin-bottom: 30px
+}
+
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
